--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/utils.css">
@@ -16,14 +17,33 @@
 	<header>
 		<div class="header-head">
 			<nav class="header-nav container">
-				<div>logo</div>
-				<div class="header-links">link link link link link</div>
+				<div><a href="#"><img src="./img/logo.svg" alt="logo">
+					<!-- <i class="fa-brands fa-discord"></i>
+					DISCORD</a></div> -->
+				<div class="header-links">
+					<a href="#">Scarica</a>
+					<a href="#">Perchè Discord</a>
+					<a href="#">Nitro</a>
+					<a href="#">Sicurezza</a>
+					<a href="#">Assistenza</a>
+				</div>
 				<div class="header-login">login</div>
 			</nav>
 		</div>
 		<div class="jumbotron">
 			<div class="content">
-
+				<div class="herotext">
+						<h1 class="hero-title">
+						Il tuo posto per parlare
+						</h1>
+					<div class="hero-desc">
+						Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artiatica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso. 
+					</div>
+				</div>
+					
+				<div class="hero-button">
+					<a href="#"></a>
+				</div>
 			</div>
 		</div>
 	</header>
