--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<header>
 		<div class="header-head">
 			<nav class="header-nav container">
-				<div><a href="#"><img src="./img/logo.svg" alt="logo">
-					<!-- <i class="fa-brands fa-discord"></i>
-					DISCORD</a></div> -->
+				<div class="logo-link">
+					<a  href="#"><img class="logo-img" src="./img/logo.svg" alt="logo"></a>
+				</div>
 				<div class="header-links">
 					<a href="#">Scarica</a>
 					<a href="#">Perchè Discord</a>
@@ -27,22 +27,27 @@
 					<a href="#">Sicurezza</a>
 					<a href="#">Assistenza</a>
 				</div>
-				<div class="header-login">login</div>
+				<div class="header-login">
+					<button type="button">Accedi</button>
+				</div>
 			</nav>
 		</div>
 		<div class="jumbotron">
 			<div class="content">
 				<div class="herotext">
-						<h1 class="hero-title">
+					<h1 class="hero-title">
 						Il tuo posto per parlare
-						</h1>
+					</h1>
+
 					<div class="hero-desc">
 						Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artiatica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso. 
-					</div>
+					</div>	
 				</div>
 					
-				<div class="hero-button">
-					<a href="#"></a>
+				<div class="hero-buttons">
+						<a class="bt1" href="#"><i class="fa-solid fa-download"></i>Scarica per Mac</a>
+					
+						<a class="bt2" href="#">Apri discord nel tuo browser</a>
 				</div>
 			</div>
 		</div>
@@ -51,8 +56,15 @@
 	<main>
 		<section class="bg-white">
 			<div class="container">
-				<div class="main-col"></div>
-				<div class="side-col"></div>
+				<div class="main-col">
+					<img class="main-col-img" src="./img/item1.svg" alt="item1">
+				</div>
+				<div class="side-col">
+					<h1 class="side-col-title"> Un luogo a invito con tutto lo spazio necessario per parlare </h1>
+					<p class="side-col-tx">
+						I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della giornata senza intasare una chat di gruppo
+					</p>
+				</div>
 			</div>
 		</section>
 		<section class="bg-gray">
