--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<img class="main-col-img" src="./img/item1.svg" alt="item1">
 				</div>
 				<div class="side-col">
-					<h1 class="side-col-title"> Un luogo a invito con tutto lo spazio necessario per parlare </h1>
+					<h2 class="side-col-title mg1"> Un luogo a invito con tutto lo spazio necessario per parlare </h2>
 					<p class="side-col-tx">
 						I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della giornata senza intasare una chat di gruppo
 					</p>
@@ -69,19 +69,48 @@
 		</section>
 		<section class="bg-gray">
 			<div class="container">
-				<div class="side-col"></div>
-				<div class="main-col"></div>
+				<div class="side-col">
+					<h2 class="side-col-title">Dove trovarsi è facile</h2>
+					<p class="side-col-tx">Metti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+				</div>
+				<div class="main-col">
+					<img class="main-col-img" src="./img/item2.svg" alt="item2">
+				</div>
 			</div>
 		</section>
 		<section class="bg-white">
 			<div class="container">
-				<div class="main-col"></div>
-				<div class="side-col"></div>
+				<div class="main-col">
+					<img class="main-col-img" src="./img/item3.svg" alt="item3">
+				</div>
+				<div class="side-col">
+					<h2 class="side-col-title">
+						Da pochi a un fandom
+					</h2>
+					<p class="side-col-tx">
+						Dal inizio a un community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+					</p>
+				</div>
 			</div>
 		</section>
 		<section class="bg-gray">
 			<div class="container">
-				<div class="hilighted-content"></div>
+				<div class="hilighted-content">
+					<h2 class="hilighted-title">
+						Tecnologia affidabile per tenersi in contatto
+					</h2>
+					<p class="hilighted-tx">
+						Video e audio a bassa tendenza ti faranno sentire come se fosse tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunetivi in una sessione di disegno con la condivione schermo.
+					</p>
+
+					<img class="hilighted-img" src="./img/item4-big.svg" alt="item4"></div>
+					
+
+					<div class="bg-gray container">
+						<h3 class="input-title">Pronto a iniziare la tua avventura?</h3>
+						<a class="input-button" href="#"><i class="fa-solid fa-download"></i>Scarica per Mac</a>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
